--- a/main/index.html
+++ b/main/index.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/mediaq.css">
 </head>
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-
+            <div id="image">
             </div>
 
             <div id="form">
-                <h1>Login:</h1>
+                <h1>Login</h1>
                 <p>Welcome! Login with your account to continue.</p>
-                <form action="login.php">
+
+                <form action="login.php" method="post" autocomplete="on">
+
+                    <div class="field">
+                    <span class="material-symbols-outlined">mail</span>
                     
+                        <input type="email" name="login" id="ilogin" autocomplete="email" required minlength="9" maxlength="30">
+                        <label for="ilogin">E-mail</label>
+                    </div>
+
+                    <div class="field">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="pass" id="ipass" autocomplete="new-password" required minlength="9" maxlength="30"> 
+                        <label for="ipass">Password</label>  
+                    </div>
+
+                        <input type="submit" value="Enter">
+                        <a href="Esqueci.html" class="button">Forgot password?</a>
+                    
+
                 </form>
             </div>
         </section>
